tests/NormalTests/paczka1/small_fuzzy/92044285.err
Error in line 7: 3jiv A44 85,8
Error in line 13: 2Wfs A834 81,8
Error in line 8: LLevxBj1rk A834 71,2
Error in line 12: 3jiv A578 22,8
